--- a/roles/nextcloud/tasks/php.yml
+++ b/roles/nextcloud/tasks/php.yml
@@ -4,10 +4,14 @@
     cache_valid_time: 600
   with_items:
     - php7.3
+    - php7.3-common     # unknown
     - php7.3-curl
     - php7.3-dom
     - php7.3-gd
+    - php7.3-intl       # translation performance
     - php7.3-mbstring
     - php7.3-mysql
     - php7.3-xml
     - php7.3-zip
+    - php-redis         # caching
+    - php-imagick       # previews
