--- a/roles/nextcloud/defaults/main.yml
+++ b/roles/nextcloud/defaults/main.yml
@@ -1,6 +1,9 @@
-nextcloud_archive_path: /tmp/nextcloud.tar.bz2
+nc_archive_path: /tmp/nextcloud.tar.bz2
 
 db_root_password: dbtest
 db_user_password: ncdbtest
 db_user_name: nextcloud
 db_name: nextcloud
+
+nc_admin_name: nc-admin-user
+nc_admin_password: ncadmtest
