--- a/roles/nextcloud/tasks/php.yml
+++ b/roles/nextcloud/tasks/php.yml
@@ -14,4 +14,6 @@
     - php7.3-xml
     - php7.3-zip
     - php-redis         # caching
+    - redis-server
+    - php-apcu
     - php-imagick       # previews
