--- a/roles/certbot/tasks/main.yml
+++ b/roles/certbot/tasks/main.yml
@@ -7,8 +7,12 @@
     - python-certbot-apache
   register: certbot_install
 
-# TODO does not certbot create cron entries automatically?
-
 - name: create certificate (Apache)
   shell: "certbot -n --apache --agree-tos -m '{{ certbot.contact_mail_address }}' -d '{{ certbot.domain }}' --redirect"
   when: certbot_install.changed
+
+- name: schedule certificate renewal attempts
+  cron:
+    job: "/usr/bin/certbot renew --apache -n --agree-tos -m '{{ certbot.contact_mail_address }}' --redirect"
+    name: certbot
+    special_time: weekly
