--- a/roles/nextcloud/templates/apache2/sites/nextcloud-le-ssl.conf
+++ b/roles/nextcloud/templates/apache2/sites/nextcloud-le-ssl.conf
@@ -1,3 +1,8 @@
+<VirtualHost *:80>
+    RewriteEngine On
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}$1 [R=301,L]
+</VirtualHost>
+
 <IfModule mod_ssl.c>
 <VirtualHost *:443>
     ServerAdmin {{ mail_recipient }}
@@ -13,14 +18,25 @@
         </IfModule>
     </Directory>
 
+    # SSL configuration
+    Include /etc/letsencrypt/options-ssl-apache.conf
+
     # enable HTTP/2, if available
     Protocols h2 http/1.1
 
+    # HTTP Strict Transport Security (mod_headers is required) (63072000 seconds)
+    Header always set Strict-Transport-Security "max-age=63072000"
+
+    # dedicated log files
     ErrorLog ${APACHE_LOG_DIR}/error-nextcloud.log
     CustomLog ${APACHE_LOG_DIR}/access-nextcloud.log combined
 
-SSLCertificateFile /etc/letsencrypt/live/{{ nas.domain }}/fullchain.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/{{ nas.domain }}/privkey.pem
-Include /etc/letsencrypt/options-ssl-apache.conf
+    # Let's Encrypt certificate
+    SSLCertificateFile /etc/letsencrypt/live/{{ nas.domain }}/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/{{ nas.domain }}/privkey.pem
 </VirtualHost>
+
+# OCSP stapling (https://ssl-config.mozilla.org/#server=apache&version=2.4.38&config=intermediate&openssl=1.1.1d&guideline=5.6)
+SSLUseStapling On
+SSLStaplingCache "shmcb:logs/ssl_stapling(32768)"
 </IfModule>
