--- a/roles/nextcloud/tasks/install.yml
+++ b/roles/nextcloud/tasks/install.yml
@@ -87,38 +87,12 @@
   when: nc_install_path.changed
   no_log: yes
 
-- name: configure background jobs
-  shell: |
-    sudo -u www-data php {{ nextcloud.path }}/occ background:cron
-  when: nc_install_path.changed
-
 - name: configure routine
   import_tasks: config.yml
 
-- name: schedule cron job
+- name: schedule background cron job
   cron:
     name: nextcloud
     job: "php --define apc.enable_cli=1 -f {{ nextcloud.path }}/cron.php"
     minute: "*/5"
     user: "www-data"
-
-- name: configure redis
-  blockinfile:
-    block: "{{ lookup('template', 'redis/redis.conf') }}"
-    dest: "/etc/redis/redis.conf"
-
-- name: add server user to redis group
-  user:
-    name: www-data
-    groups: redis
-    append: yes
-
-- name: restart redis
-  service:
-    name: redis-server
-    state: restarted
-
-- name: restart apache
-  service:
-    name: apache2
-    state: restarted
