--- a/roles/nextcloud/tasks/mariadb.yml
+++ b/roles/nextcloud/tasks/mariadb.yml
@@ -3,11 +3,11 @@
     name: "{{ db_name }}"
     login_password: "{{ db_root_password }}"
 
-- name: remove database user # avoid privilege parsing bug of mysql_user
-  mysql_user:
-    name: "{{ db_user_name }}"
-    state: absent
-    login_password: "{{ db_root_password }}"
+# - name: remove database user # avoid privilege parsing bug of mysql_user
+#   mysql_user:
+#     name: "{{ db_user_name }}"
+#     state: absent
+#     login_password: "{{ db_root_password }}"
 
 - name: create database user
   mysql_user:
