--- a/roles/nextcloud/tasks/config.yml
+++ b/roles/nextcloud/tasks/config.yml
@@ -24,6 +24,11 @@
     owner: root
   when: nextcloud_config.changed
 
+- name: configure background jobs
+  shell: |
+    sudo -u www-data php {{ nextcloud.path }}/occ background:cron
+  when: nc_install_path.changed
+
 - name: create users
   include_tasks: user.yml
   with_items: "{{ users }}"
