distinct between templates and files, folderwise

--- a/roles/apache2/tasks/main.yml
+++ b/roles/apache2/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: configure SSL
   blockinfile:
-    block: "{{ lookup('template', 'options-ssl-apache.conf') }}"
+    block: "{{ lookup('file', 'options-ssl-apache.conf') }}"
     dest: "/etc/letsencrypt/options-ssl-apache.conf"
 
 - name: install SSL certificate via certbot
