--- a/roles/php/tasks/main.yml
+++ b/roles/php/tasks/main.yml
@@ -52,7 +52,7 @@
 
 - name: add server user to redis group
   user:
-    name: www-data
+    name: "{{ server_user }}"
     groups: redis
     append: yes
   
