--- a/roles/nextcloud/tasks/install.yml
+++ b/roles/nextcloud/tasks/install.yml
@@ -15,12 +15,12 @@
   shell: 'tar -xf "{{ nc_archive_path }}" -C "{{ nextcloud.path }}" --strip 1'
   when: nc_install_path.changed
 
-- name: set base folder permissions
+- name: set Nextcloud folder permissions
   file:
     path: "{{ nextcloud.path }}"
     owner: root
     group: "{{ server_user }}"
-    mode: 0750
+    mode: "{{ nc_directory_mode }}"
   when: nc_install_path.changed
 
 - name: create lazy-initialized folders
@@ -43,12 +43,12 @@
   register: nc_files
   when: nc_install_path.changed
 
-- name: set permissions of Nextcloud files
+- name: set permissions of Nextcloud files and folders
   file:
     path: "{{ item.path }}"
     owner: "{{ server_user }}"
     group: "{{ server_user }}"
-    mode: "u=rw,g=r,o=,a-x+X"
+    mode: "{{ nc_directory_and_file_mode }}"
     recurse: "{{ item.isdir }}"
   with_items: "{{ nc_files.files }}"
   when: nc_install_path.changed
@@ -58,7 +58,7 @@
     path: "{{ nextcloud.path }}/occ"
     owner: "{{ server_user }}"
     group: "{{ server_user }}"
-    mode: 0751
+    mode: "{{ nc_binary_mode }}"
   when: nc_install_path.changed
 
 - name: set permissions of htaccess
@@ -66,7 +66,7 @@
     path: "{{ nextcloud.path }}/.htaccess"
     owner: root
     group: "{{ server_user }}"
-    mode: 0644
+    mode: "{{ nc_htaccess_mode }}"
   when: nc_install_path.changed
 
 - name: create data directory
@@ -74,7 +74,7 @@
     path: "{{ nextcloud.data_path }}"
     owner: "{{ server_user }}"
     group: "{{ server_user }}"
-    mode: 0750
+    mode: "{{ nc_directory_mode }}"
     state: directory
 
 - name: install
