--- a/inventories/nas/hosts.yml
+++ b/inventories/nas/hosts.yml
@@ -1,5 +1,11 @@
 all:
   children:
+    pi:
+      hosts:
+        192.168.1.4:
+          ansible_become_pass: raspberry
+          ansible_ssh_pass: raspberry
     nas:
       hosts:
         192.168.1.4:
+          ansible_sudo_pass: "{{ vault_ansible_sudo_pass }}"
