--- a/roles/nextcloud/templates/apache2/sites/nextcloud-le-ssl.conf
+++ b/roles/nextcloud/templates/apache2/sites/nextcloud-le-ssl.conf
@@ -7,6 +7,9 @@
 <VirtualHost *:443>
     ServerAdmin {{ mail_recipient }}
     ServerName {{ nas.domain }}
+    <IfModule mod_headers.c>
+      Header always set Strict-Transport-Security "max-age=15552000; includeSubDomains"
+    </IfModule>
     DocumentRoot {{ nextcloud.path }}
     <Directory {{ nextcloud.path }}>
         Require all granted
