--- a/roles/os/tasks/hostname.yml
+++ b/roles/os/tasks/hostname.yml
@@ -1,9 +1,9 @@
-- name: hostname - set
+- name: set hostname
   hostname:
     name: "{{ nas.hostname }}"
   when: "ansible_fqdn != nas.hostname"
 
-- name: hostname - update hosts file
+- name: update hosts file
   lineinfile:
     dest: /etc/hosts
     line: "127.0.1.1\t{{ nas.hostname }}"
