extract and fix auto-upgrade role

--- a/setup.yml
+++ b/setup.yml
@@ -6,10 +6,10 @@
   vars:
     ansible_python_interpreter: /usr/bin/python3
   roles:
-    - role: ssmtp
-      tags: always
     - role: nas
       tags: nas
+    - role: auto-upgrade
+      tags: auto-upgrade
     - role: sshd
       tags: sshd
     - role: dynv6
